# Iris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
models/: README.md  convert.bat
shaders/0.1/: simple.frag  simple.vert
shaders/0.2/: simple.vert
shaders/0.3/: simple.frag  simple.vert
shaders/1.1/: simple.frag
shaders/2.1/: frustum.vert  light.frag  line.frag  line.vert  simple.frag
shaders/3.1/: fullscreen.frag  fullscreen.vert  light.vert  line.frag  simple.frag  simple.vert
shaders/3.2/: fullscreen.frag  light.frag  line.vert  simple.frag  simple.vert
shaders/4.1/: debug_shadow.frag  debug_shadow.vert  depth_only.vert  depth_reduce.comp  depth_reduce_init.comp  empty.frag  light.frag  light.vert  line.frag  line.vert  setup_shadows.comp  shadow.frag  shadow.vert  simple.frag  simple.vert
shaders/4.2/: average.frag  average.vert  trace.frag  trace.vert
shaders/5.0/: debug_aabb.vert  depth_only.vert  depth_reduce.comp  depth_reduce_init.comp  fullscreen.frag  generic_cull.comp  hiz_construct.comp  main.frag  main.vert  setup_shadows.comp  shadow.frag  shadow.vert
shaders/5.1/: main.frag  main.mesh
shaders/5.2/: atmosphere.frag  atmosphere.vert  debug_aabb.frag  depth_only.frag  depth_only.vert  depth_reduce_init.comp  generic_cull.comp  main.frag  main.vert  roc.frag  roc.vert  roc_cull.comp  setup_shadows.comp  shadow.frag  shadow.vert  taa_resolve.frag  taa_resolve.vert
src/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  debug_break.hpp  framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  mesh_pool.cpp  mesh_pool.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  utilities.hpp
src/0.1/: main.cpp
src/0.2/: main.cpp
src/0.3/: main.cpp
src/1.1/: main.cpp
src/2.1/: main.cpp
src/3.1/: main.cpp
src/3.2/: main.cpp
src/4.1/: main.cpp
src/4.2/: main.cpp
src/5.0/: main.cpp
src/5.1/: main.cpp
src/5.2/: main.cpp
